# crispy-bootstrap4

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
crispy_bootstrap4/: __init__.py
crispy_bootstrap4/templates/bootstrap4/: field.html
crispy_bootstrap4/templates/bootstrap4/layout/: field_errors.html  field_errors_block.html  field_file.html
tests/: conftest.py  forms.py  test_form_helper.py  test_layout.py  test_layout_objects.py  test_settings.py  test_tags.py  utils.py
tests/results/bootstrap4/test_form_helper/: bootstrap_form_show_errors_bs4_false.html  bootstrap_form_show_errors_bs4_false_lt50.html  bootstrap_form_show_errors_bs4_false_lt52.html  bootstrap_form_show_errors_bs4_true.html  bootstrap_form_show_errors_bs4_true_lt50.html  bootstrap_form_show_errors_bs4_true_lt52.html  test_form_show_errors_non_field_errors_false.html  test_form_show_errors_non_field_errors_false_lt50.html  test_form_show_errors_non_field_errors_false_lt52.html  test_form_show_errors_non_field_errors_false_lte40.html  test_form_show_errors_non_field_errors_true.html  test_form_show_errors_non_field_errors_true_lt50.html  test_form_show_errors_non_field_errors_true_lt52.html  test_form_show_errors_non_field_errors_true_lte40.html
tests/results/bootstrap4/test_layout/: test_file_field_default.html  test_fundamentals_example.html  test_inline_formset_checkbox.html  test_use_custom_control_is_used_in_checkboxes_true_failing.html  test_use_custom_control_is_used_in_checkboxes_true_failing_lt50.html  test_use_custom_control_is_used_in_radio_true_failing.html  test_use_custom_control_is_used_in_radio_true_failing_lt50.html
tests/results/bootstrap4/test_layout_objects/: test_field_with_buttons.html  test_grouped_checkboxes_failing.html  test_grouped_radios_failing.html  (+5 more)
